# fastapi-starter-kit

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0982630f74e8_.py  378099587bca_.py  a289d31f705d_.py
src/: main.py
src/config/db/: db_config.py
src/modules/task/: task_router.py
src/modules/task/data/: task_enum.py
src/modules/task/dto/: task_create_dto.py  task_update_dto.py
src/modules/task/entity/: task_entity.py
src/modules/user/: user_router.py  user_service.py
src/modules/user/data/: user_role_enum.py
src/modules/user/dto/: create_user_dto.py  user_update_dto.py
src/modules/user/entity/: user_entity.py
src/modules/user/schema/: user_entity.py  user_schema.py
