[tool.poetry]
name = "fastapi-starter-kit"
version = "0.1.0"
description = ""
authors = ["Al Mobin <instance.of.venture@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_starter_kit"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.1"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
